--- a/digitala.html
+++ b/digitala.html
@@ -18,22 +18,13 @@
             galactic: ['Montserrat', 'Quicksand', 'sans-serif']
           },
           colors: {
-            base: '#1c1512',
+            base: '#f8f7fa',
             accent: '#fb923c',
             accentDark: '#d97706',
-            card: '#2d221b',
-            overlay: '#2a1a10',
-            soft: '#ffe3c7',
+            card: '#fffdfa',
+            overlay: '#f7edea',
+            soft: '#3d2f1b',
             border: '#fbbf24'
-          },
-          keyframes: {
-            slideUp: {
-              '0%': { transform: 'translateY(30px)', opacity: 0 },
-              '100%': { transform: 'translateY(0)', opacity: 1 }
-            }
-          },
-          animation: {
-            slideUp: 'slideUp 1.2s cubic-bezier(.49,.26,.21,1.07) forwards'
           },
           dropShadow: {
             'orange-glow': '0 4px 32px #fb923c44',
@@ -45,31 +36,32 @@
   <style>
     html {
       scroll-behavior: smooth;
-      background: linear-gradient(135deg, #24140c 30%, #39220c 100%);
+      background: linear-gradient(120deg, #fffdfa 0%, #fae3ce 100%);
       min-height: 100%;
     }
     body {
       min-width: 1024px;
-      max-width: 1140px;
+      max-width: 1200px;
       margin: 0 auto;
       background: transparent;
     }
-    /* Sections animation */
-    section { opacity: 0; transform: translateY(30px); animation-fill-mode: forwards; animation-duration: 1.2s; }
+    section { opacity: 0; transform: translateY(30px); animation-fill-mode: forwards; animation-duration: 1.2s;}
     section.visible { opacity: 1; transform: translateY(0); animation-name: slideUp;}
-    /* Card hover effect */
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(30px);}
+      to { opacity: 1; transform: translateY(0);}
+    }
     .card-hover:hover { transform: translateY(-8px) scale(1.045); box-shadow: 0 8px 32px #fb923c33,0 0px 10px #fbbf2455; transition: all 0.3s cubic-bezier(.49,.26,.21,1.07);}
-    /* Navbar underline */
     nav a { position: relative; }
     nav a::after { content: ''; position: absolute; left: 0; bottom: -7px; width: 0%; height: 3px; background: #fb923c; border-radius: 3px; transition: width .3s;}
     nav a:hover::after, nav a:focus::after { width: 100%;}
     .navbar-blur {
       backdrop-filter: blur(18px) saturate(180%);
       -webkit-backdrop-filter: blur(18px) saturate(180%);
-      background: linear-gradient(90deg, #2e160b 0%, #fb923c18 100%);
+      background: rgba(255, 255, 255, 0.93);
       box-shadow: 0 7px 36px #fb923c2a;
-      border-bottom: 4px solid #fb923c;
-      border-radius: 0 0 2.9rem 2.9rem;
+      border-bottom: 5px solid #fb923c;
+      border-radius: 0 0 3.1rem 3.1rem;
     }
     @media (max-width: 1100px) { body { max-width: 100vw; } }
     @media (max-width: 1023px) {
@@ -79,18 +71,17 @@
       .navbar-blur{border-radius:0;}
     }
     @media (max-width: 900px) {
-      .main-nav { font-size: 1.08rem; }
+      .main-nav { font-size: 1.05rem; }
       section h2 { font-size: 2.4rem !important; }
     }
     @media (max-width: 700px) {
       body, .navbar-blur { min-width: 100vw; max-width: 100vw; }
-      header h1 { font-size: 2.7rem !important; }
-      .main-nav { font-size: 1rem !important; }
-      .social-icons svg { width: 29px !important; height: 29px !important; }
+      header h1 { font-size: 2.3rem !important; }
+      .main-nav { font-size: .99rem !important; }
+      .social-icons svg { width: 27px !important; height: 27px !important; }
     }
     .social-link svg { transition: transform 0.18s; }
-    .social-link:hover svg { transform: scale(1.19) rotate(-10deg);}
-    /* Gradient border for avatar */
+    .social-link:hover svg { transform: scale(1.17) rotate(-9deg);}
     .avatar-border {
       padding: 4px;
       background: linear-gradient(130deg, #fb923c 0%, #ffe3c7 100%);
@@ -103,31 +94,31 @@
 
   <!-- NAVBAR -->
   <nav class="navbar-blur fixed top-0 left-1/2 -translate-x-1/2 w-[99vw] max-w-[1200px] z-40 py-0 px-0 shadow-xl flex items-center justify-center"
-    style="height:97px;">
-    <div class="w-full flex items-center justify-between px-14 max-w-[1200px]">
-      <span class="font-black text-3xl text-accent tracking-widest select-none drop-shadow-orange-glow" style="letter-spacing:.17em;">
-        DIGITALA<span class="text-accentDark">.</span>
+    style="height:102px;">
+    <div class="w-full flex items-center justify-between px-16 max-w-[1200px]">
+      <span class="font-black text-4xl text-accentDark tracking-widest select-none drop-shadow-orange-glow" style="letter-spacing:.15em;">
+        DIGITALA<span class="text-accent">.</span>
       </span>
       <div class="flex gap-4 items-center">
-        <div class="flex main-nav gap-7 font-semibold text-lg">
-          <a href="#about" class="text-soft hover:text-accent transition">About</a>
-          <a href="#skills" class="text-soft hover:text-accent transition">Skills</a>
-          <a href="#services" class="text-soft hover:text-accent transition">Services</a>
-          <a href="#testimonials" class="text-soft hover:text-accent transition">Testimonials</a>
-          <a href="#contact" class="text-soft hover:text-accent transition">Contact</a>
+        <div class="flex main-nav gap-8 font-semibold text-lg">
+          <a href="#about" class="text-soft hover:text-accentDark transition">About</a>
+          <a href="#skills" class="text-soft hover:text-accentDark transition">Skills</a>
+          <a href="#services" class="text-soft hover:text-accentDark transition">Services</a>
+          <a href="#testimonials" class="text-soft hover:text-accentDark transition">Testimonials</a>
+          <a href="#contact" class="text-soft hover:text-accentDark transition">Contact</a>
         </div>
         <!-- SOCIAL ICONS -->
-        <div class="flex social-icons gap-6 ml-11">
+        <div class="flex social-icons gap-7 ml-14">
           <!-- WhatsApp -->
           <a href="https://wa.me/71732045" target="_blank" title="WhatsApp" class="social-link">
-            <svg width="35" height="35" viewBox="0 0 35 35">
-              <circle cx="17.5" cy="17.5" r="17.5" fill="#25D366"/>
-              <path fill="#fff" d="M26.5 24.5c-1.22.89-2.44 1.44-3.93 1.66-1.49.22-3.05.1-4.52-.47-1.39-.47-2.78-1.2-4.01-2.21a12.24 12.24 0 0 1-3.01-4.01c-.81-1.39-1.36-2.71-1.58-4.19.08-1.49.24-3.08.93-4.52.69-1.44 1.74-2.61 3.13-3.5C15.04 6.47 16.53 6.13 18.07 6.35c1.54.22 3.1.69 4.54 1.59a13.15 13.15 0 0 1 4.01 3c1.01 1.23 1.74 2.62 2.21 4.01.57 1.47.69 3.03.47 4.52-.22 1.49-.77 2.71-1.66 3.93zM18.27 13.2c-1.6-2.06-3.81-2.52-4.82-2.52-.87 0-1.41.56-1.65.84-.23.28-.75 1.26-.33 2.37.41 1.11 1.64 3.14 3.91 4.74 2.27 1.6 4.48 1.37 5.5.96 1.02-.41 1.61-1.05 1.81-1.28.2-.23.75-.89.75-1.87 0-.98-1.01-1.29-1.32-1.38-.31-.09-2.25-.99-3.5-2.86z"/>
+            <svg width="39" height="39" viewBox="0 0 39 39">
+              <circle cx="19.5" cy="19.5" r="19.5" fill="#25D366"/>
+              <path fill="#fff" d="M29 27c-1.4 1-2.8 1.6-4.4 1.8-1.7.3-3.5.1-5.1-.5-1.6-.5-3.1-1.4-4.5-2.5-1.3-1.1-2.3-2.5-3.2-3.9-.9-1.5-1.5-3-1.7-4.7.1-1.7.3-3.5 1-5.1.8-1.6 2-3 3.7-4 1.6-1 3.5-1.4 5.2-1.2 1.7.2 3.4.8 5 1.6 1.6.9 3.1 2 4.4 3.4 1.2 1.4 2.1 3 2.7 4.7.7 1.7.8 3.5.5 5.2-.3 1.7-1 3.2-2 4.4zM19.6 15.8c-1.8-2.3-4.3-2.8-5.5-2.8-1 0-1.6.6-1.9.9-.3.3-.8 1.4-.4 2.6.5 1.2 1.9 3.6 4.5 5.4 2.6 1.8 5.1 1.6 6.3 1.1 1.2-.5 1.9-1.2 2.1-1.5.2-.3.9-1 .9-2.2 0-1.2-1.1-1.5-1.6-1.7-.4-.1-2.6-1.2-3.9-3.4z"/>
             </svg>
           </a>
           <!-- Instagram -->
           <a href="https://www.instagram.com/digitala.zone?igsh=MWs0a3JkdDNpOW1rZw==" target="_blank" title="Instagram" class="social-link">
-            <svg width="35" height="35" viewBox="0 0 35 35">
+            <svg width="39" height="39" viewBox="0 0 39 39">
               <defs>
                 <radialGradient id="instaGrad" cx="50%" cy="50%" r="80%" fx="50%" fy="50%">
                   <stop offset="0%" stop-color="#fd5"/>
@@ -136,20 +127,20 @@
                   <stop offset="90%" stop-color="#285AEB"/>
                 </radialGradient>
               </defs>
-              <circle cx="17.5" cy="17.5" r="17.5" fill="url(#instaGrad)"/>
-              <rect x="10" y="10" width="15" height="15" rx="6" fill="#fff" opacity=".95"/>
-              <circle cx="17.5" cy="17.5" r="4.8" fill="url(#instaGrad)"/>
-              <circle cx="24.2" cy="11.2" r="1.4" fill="url(#instaGrad)"/>
+              <circle cx="19.5" cy="19.5" r="19.5" fill="url(#instaGrad)"/>
+              <rect x="11" y="11" width="17" height="17" rx="7" fill="#fff" opacity=".93"/>
+              <circle cx="19.5" cy="19.5" r="5.3" fill="url(#instaGrad)"/>
+              <circle cx="27" cy="12.5" r="1.8" fill="url(#instaGrad)"/>
             </svg>
           </a>
           <!-- LinkedIn -->
           <a href="https://www.linkedin.com/in/tala-chibli-89a8632ab?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" title="LinkedIn" class="social-link">
-            <svg width="35" height="35" viewBox="0 0 35 35">
-              <circle cx="17.5" cy="17.5" r="17.5" fill="#0077B5"/>
-              <rect x="12" y="15" width="3" height="10" fill="#fff"/>
-              <circle cx="13.5" cy="12.5" r="1.5" fill="#fff"/>
-              <rect x="17" y="15" width="3" height="6.5" fill="#fff"/>
-              <rect x="20.5" y="18" width="3" height="7" fill="#fff"/>
+            <svg width="39" height="39" viewBox="0 0 39 39">
+              <circle cx="19.5" cy="19.5" r="19.5" fill="#0077B5"/>
+              <rect x="13" y="17" width="3.7" height="12" fill="#fff"/>
+              <circle cx="14.8" cy="14.8" r="1.8" fill="#fff"/>
+              <rect x="19" y="17" width="3.7" height="7.7" fill="#fff"/>
+              <rect x="23.3" y="20.5" width="3.7" height="8.5" fill="#fff"/>
             </svg>
           </a>
         </div>
@@ -158,14 +149,14 @@
   </nav>
 
   <!-- HEADER -->
-  <header class="min-h-[58vh] flex flex-col justify-center items-center px-4 text-center relative pt-48 overflow-hidden">
+  <header class="min-h-[56vh] flex flex-col justify-center items-center px-4 text-center relative pt-48 overflow-hidden">
     <span class="avatar-border mb-8 mt-8">
-      <img src="https://i.imgur.com/iqVhMNs.png" alt="Logo" class="w-36 h-36 rounded-full shadow-lg" />
+      <img src="https://i.imgur.com/iqVhMNs.png" alt="Logo" class="w-40 h-40 rounded-full shadow-lg" />
     </span>
     <h1 class="text-accent drop-shadow-orange-glow z-10 font-black text-7xl md:text-8xl tracking-tight select-none">Digitala</h1>
-    <p class="mt-5 max-w-xl font-medium z-10 text-xl text-soft select-none">
+    <p class="mt-6 max-w-xl font-medium z-10 text-2xl text-soft select-none">
       Digital Services By <span class="text-accentDark font-bold">Tala Chibli</span><br>
-      <span class="text-base block mt-2 text-soft/70">
+      <span class="text-lg block mt-4 text-soft/80">
         With 3 years of experience in the digital field, I offer a complete package to take your brand to the next level.<br>
         From strategy to design to execution. I handle it all like it's my own project.
       </span>
@@ -190,7 +181,7 @@
     <!-- Skills -->
     <section id="skills" class="mt-20 mb-20 opacity-0 translate-y-8">
       <h2 class="text-accentDark mb-9 text-4xl border-b-4 border-accent w-fit select-none font-bold px-2">Skills</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-9 max-w-6xl">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-6xl">
         <div class="bg-card rounded-2xl p-7 shadow-lg card-hover">
           <h3 class="text-accentDark mb-4 text-xl font-semibold">Design & Creativity</h3>
           <ul class="list-disc list-inside leading-relaxed font-soft text-base text-soft">
@@ -227,7 +218,7 @@
     <!-- Services -->
     <section id="services" class="mt-20 mb-20 opacity-0 translate-y-8">
       <h2 class="text-accentDark mb-9 text-4xl border-b-4 border-accent w-fit select-none font-bold px-2">Services</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-9 max-w-6xl">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl">
         <div class="bg-card rounded-2xl p-6 shadow-lg text-accentDark font-semibold text-lg card-hover">Social Media Management</div>
         <div class="bg-card rounded-2xl p-6 shadow-lg text-accentDark font-semibold text-lg card-hover">Digital Marketing and Advertising</div>
         <div class="bg-card rounded-2xl p-6 shadow-lg text-accentDark font-semibold text-lg card-hover">Graphic Design (posts, stories, logos, branding)</div>
