--- a/digitala.html
+++ b/digitala.html
@@ -18,13 +18,22 @@
             galactic: ['Montserrat', 'Quicksand', 'sans-serif']
           },
           colors: {
-            base: '#f8f7fa',
+            base: '#fff6ec',
             accent: '#fb923c',
             accentDark: '#d97706',
-            card: '#fffdfa',
-            overlay: '#f7edea',
-            soft: '#3d2f1b',
+            card: '#ffe3c7',
+            overlay: '#fff1e0',
+            soft: '#7c4a1e',
             border: '#fbbf24'
+          },
+          keyframes: {
+            slideUp: {
+              '0%': { transform: 'translateY(30px)', opacity: 0 },
+              '100%': { transform: 'translateY(0)', opacity: 1 }
+            }
+          },
+          animation: {
+            slideUp: 'slideUp 1.2s ease-in-out forwards'
           },
           dropShadow: {
             'orange-glow': '0 4px 32px #fb923c44',
@@ -34,73 +43,61 @@
     }
   </script>
   <style>
-    html {
-      scroll-behavior: smooth;
-      background: linear-gradient(120deg, #fffdfa 0%, #fae3ce 100%);
-      min-height: 100%;
-    }
-    body {
-      min-width: 1024px;
-      max-width: 1200px;
-      margin: 0 auto;
-      background: transparent;
-    }
-    section { opacity: 0; transform: translateY(30px); animation-fill-mode: forwards; animation-duration: 1.2s;}
+    html { scroll-behavior: smooth; background: #fff6ec; min-height: 100%; }
+    body { min-width: 1024px; max-width: 1140px; margin: 0 auto; }
+    /* Custom scrollbar */
+    ::-webkit-scrollbar { width: 10px; background: #fb923c22;}
+    ::-webkit-scrollbar-thumb { background: #fb923c77; border-radius: 6px;}
+    /* Sections animation */
+    section { opacity: 0; transform: translateY(30px); animation-fill-mode: forwards; animation-duration: 1.2s; animation-timing-function: ease-in-out;}
     section.visible { opacity: 1; transform: translateY(0); animation-name: slideUp;}
-    @keyframes slideUp {
-      from { opacity: 0; transform: translateY(30px);}
-      to { opacity: 1; transform: translateY(0);}
-    }
-    .card-hover:hover { transform: translateY(-8px) scale(1.045); box-shadow: 0 8px 32px #fb923c33,0 0px 10px #fbbf2455; transition: all 0.3s cubic-bezier(.49,.26,.21,1.07);}
+    /* Card hover effect */
+    .card-hover:hover { transform: translateY(-8px) scale(1.035); box-shadow: 0 8px 32px #fb923c33, 0 1.5px 6px #d9770622; transition: all 0.3s cubic-bezier(.49,.26,.21,1.07);}
+    /* Navbar underline */
     nav a { position: relative; }
     nav a::after { content: ''; position: absolute; left: 0; bottom: -7px; width: 0%; height: 3px; background: #fb923c; border-radius: 3px; transition: width .3s;}
     nav a:hover::after, nav a:focus::after { width: 100%;}
+    /* Navbar glass effect */
     .navbar-blur {
-      backdrop-filter: blur(18px) saturate(180%);
-      -webkit-backdrop-filter: blur(18px) saturate(180%);
-      background: rgba(255, 255, 255, 0.93);
-      box-shadow: 0 7px 36px #fb923c2a;
-      border-bottom: 5px solid #fb923c;
-      border-radius: 0 0 3.1rem 3.1rem;
+      backdrop-filter: blur(16px) saturate(180%);
+      -webkit-backdrop-filter: blur(16px) saturate(180%);
+      background: rgba(255, 246, 236, 0.92);
+      box-shadow: 0 6px 48px #fb923c22;
+      border-bottom: 3.2px solid #fb923c;
     }
+    /* Responsive tweaks */
     @media (max-width: 1100px) { body { max-width: 100vw; } }
     @media (max-width: 1023px) {
       body, .navbar-blur { min-width: 100vw; max-width: 100vw; }
-      .main-nav { flex-wrap: wrap; gap: .7rem;}
-      .social-icons { gap: .7rem !important; }
-      .navbar-blur{border-radius:0;}
+      .main-nav { flex-wrap: wrap; gap: 0.7rem; }
+      .social-icons { gap: 0.7rem !important; }
     }
     @media (max-width: 900px) {
-      .main-nav { font-size: 1.05rem; }
+      .main-nav { font-size: 1.08rem; }
       section h2 { font-size: 2.4rem !important; }
     }
     @media (max-width: 700px) {
       body, .navbar-blur { min-width: 100vw; max-width: 100vw; }
-      header h1 { font-size: 2.3rem !important; }
-      .main-nav { font-size: .99rem !important; }
-      .social-icons svg { width: 27px !important; height: 27px !important; }
+      header h1 { font-size: 2.7rem !important; }
+      .main-nav { font-size: 1rem !important; }
+      .social-icons svg { width: 28px !important; height: 28px !important; }
     }
+    /* Social hover effect */
     .social-link svg { transition: transform 0.18s; }
-    .social-link:hover svg { transform: scale(1.17) rotate(-9deg);}
-    .avatar-border {
-      padding: 4px;
-      background: linear-gradient(130deg, #fb923c 0%, #ffe3c7 100%);
-      border-radius: 50%;
-      display: inline-block;
-    }
+    .social-link:hover svg { transform: scale(1.18) rotate(-9deg);}
   </style>
 </head>
 <body class="bg-base font-galactic text-soft min-h-screen">
 
   <!-- NAVBAR -->
-  <nav class="navbar-blur fixed top-0 left-1/2 -translate-x-1/2 w-[99vw] max-w-[1200px] z-40 py-0 px-0 shadow-xl flex items-center justify-center"
-    style="height:102px;">
-    <div class="w-full flex items-center justify-between px-16 max-w-[1200px]">
-      <span class="font-black text-4xl text-accentDark tracking-widest select-none drop-shadow-orange-glow" style="letter-spacing:.15em;">
+  <nav class="navbar-blur fixed top-0 left-1/2 -translate-x-1/2 w-[98vw] max-w-[1120px] z-40 py-0 px-0 shadow-xl flex items-center justify-center rounded-b-[2.4rem] border-accentDark"
+    style="height: 86px;">
+    <div class="w-full flex items-center justify-between px-10 max-w-[1080px]">
+      <span class="font-black text-3xl text-accentDark tracking-widest select-none" style="letter-spacing: .17em;">
         DIGITALA<span class="text-accent">.</span>
       </span>
-      <div class="flex gap-4 items-center">
-        <div class="flex main-nav gap-8 font-semibold text-lg">
+      <div class="flex gap-2 items-center">
+        <div class="flex main-nav gap-6 font-semibold text-lg">
           <a href="#about" class="text-soft hover:text-accentDark transition">About</a>
           <a href="#skills" class="text-soft hover:text-accentDark transition">Skills</a>
           <a href="#services" class="text-soft hover:text-accentDark transition">Services</a>
@@ -108,39 +105,31 @@
           <a href="#contact" class="text-soft hover:text-accentDark transition">Contact</a>
         </div>
         <!-- SOCIAL ICONS -->
-        <div class="flex social-icons gap-7 ml-14">
+        <div class="flex social-icons gap-4 ml-8">
           <!-- WhatsApp -->
           <a href="https://wa.me/71732045" target="_blank" title="WhatsApp" class="social-link">
-            <svg width="39" height="39" viewBox="0 0 39 39">
-              <circle cx="19.5" cy="19.5" r="19.5" fill="#25D366"/>
-              <path fill="#fff" d="M29 27c-1.4 1-2.8 1.6-4.4 1.8-1.7.3-3.5.1-5.1-.5-1.6-.5-3.1-1.4-4.5-2.5-1.3-1.1-2.3-2.5-3.2-3.9-.9-1.5-1.5-3-1.7-4.7.1-1.7.3-3.5 1-5.1.8-1.6 2-3 3.7-4 1.6-1 3.5-1.4 5.2-1.2 1.7.2 3.4.8 5 1.6 1.6.9 3.1 2 4.4 3.4 1.2 1.4 2.1 3 2.7 4.7.7 1.7.8 3.5.5 5.2-.3 1.7-1 3.2-2 4.4zM19.6 15.8c-1.8-2.3-4.3-2.8-5.5-2.8-1 0-1.6.6-1.9.9-.3.3-.8 1.4-.4 2.6.5 1.2 1.9 3.6 4.5 5.4 2.6 1.8 5.1 1.6 6.3 1.1 1.2-.5 1.9-1.2 2.1-1.5.2-.3.9-1 .9-2.2 0-1.2-1.1-1.5-1.6-1.7-.4-.1-2.6-1.2-3.9-3.4z"/>
+            <svg width="34" height="34" viewBox="0 0 34 34" fill="none">
+              <circle cx="17" cy="17" r="17" fill="#25D366"/>
+              <path d="M25.5 22.5c-1.1.8-2.2 1.3-3.5 1.5-1.3.2-2.7.1-4-.4-1.2-.4-2.4-1.1-3.4-2-1-.8-1.9-1.9-2.6-3-.8-1.2-1.3-2.4-1.5-3.7 0-1.3.1-2.7.5-4 .3-1.3.8-2.4 1.7-3.3C13.1 7.9 14.2 7.4 15.5 7.2c1.3-.2 2.7-.1 4 .4 1.2.4 2.4 1.1 3.4 2 .9.8 1.8 1.9 2.6 3 .8 1.2 1.3 2.4 1.5 3.7 0 1.3-.1 2.7-.5 4-.3 1.3-.8 2.5-1.7 3.3zm-5.7-8.9c-1.5-1.9-3.6-2.3-4.5-2.3-.8 0-1.3.5-1.5.8-.2.2-.7 1.2-.3 2.2.4.9 1.5 2.9 3.6 4.4 2.1 1.5 4.2 1.3 5.1.9.9-.4 1.4-1 1.6-1.2.2-.2.7-.8.7-1.7s-.9-1.2-1.2-1.3c-.4-.1-2-.9-2.8-1.8z" fill="#fff"/>
             </svg>
           </a>
           <!-- Instagram -->
           <a href="https://www.instagram.com/digitala.zone?igsh=MWs0a3JkdDNpOW1rZw==" target="_blank" title="Instagram" class="social-link">
-            <svg width="39" height="39" viewBox="0 0 39 39">
-              <defs>
-                <radialGradient id="instaGrad" cx="50%" cy="50%" r="80%" fx="50%" fy="50%">
-                  <stop offset="0%" stop-color="#fd5"/>
-                  <stop offset="45%" stop-color="#ff543e"/>
-                  <stop offset="60%" stop-color="#c837ab"/>
-                  <stop offset="90%" stop-color="#285AEB"/>
-                </radialGradient>
-              </defs>
-              <circle cx="19.5" cy="19.5" r="19.5" fill="url(#instaGrad)"/>
-              <rect x="11" y="11" width="17" height="17" rx="7" fill="#fff" opacity=".93"/>
-              <circle cx="19.5" cy="19.5" r="5.3" fill="url(#instaGrad)"/>
-              <circle cx="27" cy="12.5" r="1.8" fill="url(#instaGrad)"/>
+            <svg width="34" height="34" viewBox="0 0 34 34" fill="none">
+              <circle cx="17" cy="17" r="17" fill="#E4405F"/>
+              <rect x="9" y="9" width="16" height="16" rx="6" fill="white"/>
+              <circle cx="17" cy="17" r="4.5" fill="#E4405F"/>
+              <circle cx="23.5" cy="10.5" r="1.5" fill="#E4405F"/>
             </svg>
           </a>
           <!-- LinkedIn -->
           <a href="https://www.linkedin.com/in/tala-chibli-89a8632ab?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" title="LinkedIn" class="social-link">
-            <svg width="39" height="39" viewBox="0 0 39 39">
-              <circle cx="19.5" cy="19.5" r="19.5" fill="#0077B5"/>
-              <rect x="13" y="17" width="3.7" height="12" fill="#fff"/>
-              <circle cx="14.8" cy="14.8" r="1.8" fill="#fff"/>
-              <rect x="19" y="17" width="3.7" height="7.7" fill="#fff"/>
-              <rect x="23.3" y="20.5" width="3.7" height="8.5" fill="#fff"/>
+            <svg width="34" height="34" viewBox="0 0 34 34" fill="none">
+              <circle cx="17" cy="17" r="17" fill="#0077B5"/>
+              <rect x="10.5" y="14" width="2.5" height="9" fill="white"/>
+              <circle cx="11.75" cy="11.75" r="1.25" fill="white"/>
+              <rect x="15" y="14" width="2.5" height="5.5" fill="white"/>
+              <rect x="17.5" y="16.5" width="2.5" height="6.5" fill="white"/>
             </svg>
           </a>
         </div>
@@ -149,20 +138,19 @@
   </nav>
 
   <!-- HEADER -->
-  <header class="min-h-[56vh] flex flex-col justify-center items-center px-4 text-center relative pt-48 overflow-hidden">
-    <span class="avatar-border mb-8 mt-8">
-      <img src="https://i.imgur.com/iqVhMNs.png" alt="Logo" class="w-40 h-40 rounded-full shadow-lg" />
-    </span>
-    <h1 class="text-accent drop-shadow-orange-glow z-10 font-black text-7xl md:text-8xl tracking-tight select-none">Digitala</h1>
-    <p class="mt-6 max-w-xl font-medium z-10 text-2xl text-soft select-none">
+  <header class="min-h-[55vh] flex flex-col justify-center items-center px-4 text-center relative pt-44 overflow-hidden">
+    <img src="https://i.imgur.com/iqVhMNs.png" alt="Logo" class="w-36 h-36 rounded-full border-4 border-accent shadow-lg mb-6 drop-shadow-orange-glow" />
+    <h1 class="text-accent drop-shadow-orange-glow z-10 font-black text-6xl md:text-7xl tracking-tight select-none">Digitala</h1>
+    <p class="mt-5 text-soft max-w-xl font-medium z-10 text-lg select-none">
       Digital Services By <span class="text-accentDark font-bold">Tala Chibli</span><br>
-      <span class="text-lg block mt-4 text-soft/80">
-        With 3 years of experience in the digital field, I offer a complete package to take your brand to the next level.<br>
+      <span class="text-base block mt-2 text-soft/60">
+        With 3 years of experience in the digital field, I offer a complete package to take your brand to the
+        next level.<br>
         From strategy to design to execution. I handle it all like it's my own project.
       </span>
     </p>
     <a href="#contact"
-      class="mt-12 inline-block px-16 py-4 rounded-2xl bg-accentDark text-base-100 font-semibold shadow-lg hover:bg-accent transition-transform hover:scale-110 z-10 drop-shadow-orange-glow text-lg"
+      class="mt-12 inline-block px-14 py-4 rounded-2xl bg-accentDark text-base-100 font-semibold shadow-lg hover:bg-accent transition-transform hover:scale-110 z-10 drop-shadow-orange-glow text-lg"
       style="letter-spacing:.06em;">
       Let's Collaborate
     </a>
@@ -174,17 +162,20 @@
     <section id="about" class="mt-20 mb-20 opacity-0 translate-y-8">
       <h2 class="text-accentDark mb-9 text-4xl border-b-4 border-accent w-fit select-none font-bold px-2">About Me</h2>
       <p class="text-soft leading-relaxed max-w-2xl font-soft text-lg">
-        Tala, Palestinian girl living in Lebanon. Currently pursuing a double major in English Literature at the Lebanese University and Management Information Systems at Siblin Training Center. Deeply passionate about art and creativity. I have a vivid imagination, and I love expressing it through writing and design.
+        Tala, Palestinian girl living in Lebanon. Currently pursuing a double major in English Literature at the
+        Lebanese University and Management Information Systems at Siblin Training Center. Deeply passionate
+        about art and creativity. I have a vivid imagination, and I love expressing it through writing and
+        design.
       </p>
     </section>
 
     <!-- Skills -->
     <section id="skills" class="mt-20 mb-20 opacity-0 translate-y-8">
       <h2 class="text-accentDark mb-9 text-4xl border-b-4 border-accent w-fit select-none font-bold px-2">Skills</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-6xl">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-9 max-w-6xl">
         <div class="bg-card rounded-2xl p-7 shadow-lg card-hover">
           <h3 class="text-accentDark mb-4 text-xl font-semibold">Design & Creativity</h3>
-          <ul class="list-disc list-inside leading-relaxed font-soft text-base text-soft">
+          <ul class="list-disc list-inside text-soft leading-relaxed font-soft text-base">
             <li>Graphic Design</li>
             <li>UI/UX Design</li>
             <li>Social Media Content Design</li>
@@ -194,7 +185,7 @@
         </div>
         <div class="bg-card rounded-2xl p-7 shadow-lg card-hover">
           <h3 class="text-accentDark mb-4 text-xl font-semibold">Development & Digital Tools</h3>
-          <ul class="list-disc list-inside leading-relaxed font-soft text-base text-soft">
+          <ul class="list-disc list-inside text-soft leading-relaxed font-soft text-base">
             <li>HTML / CSS / JavaScript</li>
             <li>Responsive Web Design</li>
             <li>Git & GitHub (Basic)</li>
@@ -204,7 +195,7 @@
         </div>
         <div class="bg-card rounded-2xl p-7 shadow-lg card-hover">
           <h3 class="text-accentDark mb-4 text-xl font-semibold">Media & Marketing Skills</h3>
-          <ul class="list-disc list-inside leading-relaxed font-soft text-base text-soft">
+          <ul class="list-disc list-inside text-soft leading-relaxed font-soft text-base">
             <li>Digital Marketing</li>
             <li>Content Creation</li>
             <li>Social Media Strategy & Management</li>
@@ -218,7 +209,7 @@
     <!-- Services -->
     <section id="services" class="mt-20 mb-20 opacity-0 translate-y-8">
       <h2 class="text-accentDark mb-9 text-4xl border-b-4 border-accent w-fit select-none font-bold px-2">Services</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-9 max-w-6xl">
         <div class="bg-card rounded-2xl p-6 shadow-lg text-accentDark font-semibold text-lg card-hover">Social Media Management</div>
         <div class="bg-card rounded-2xl p-6 shadow-lg text-accentDark font-semibold text-lg card-hover">Digital Marketing and Advertising</div>
         <div class="bg-card rounded-2xl p-6 shadow-lg text-accentDark font-semibold text-lg card-hover">Graphic Design (posts, stories, logos, branding)</div>
@@ -253,15 +244,15 @@
         class="max-w-xl mx-auto bg-card p-8 rounded-2xl shadow-lg grid gap-7">
         <label class="block font-semibold text-accentDark">Name
           <input required type="text" name="name"
-            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft focus:outline-none focus:ring-2 focus:ring-accent bg-base" />
+            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft focus:outline-none focus:ring-2 focus:ring-accent" />
         </label>
         <label class="block font-semibold text-accentDark">Email
           <input required type="email" name="email"
-            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft focus:outline-none focus:ring-2 focus:ring-accent bg-base" />
+            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft focus:outline-none focus:ring-2 focus:ring-accent" />
         </label>
         <label class="block font-semibold text-accentDark">Message
           <textarea required name="message" rows="5"
-            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft resize-y focus:outline-none focus:ring-2 focus:ring-accent bg-base"></textarea>
+            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft resize-y focus:outline-none focus:ring-2 focus:ring-accent"></textarea>
         </label>
         <button type="submit"
           class="bg-accentDark text-base-100 px-7 py-3 rounded-xl font-semibold text-lg hover:bg-accent transition-transform hover:scale-105 drop-shadow-orange-glow">
