--- a/digitala.html
+++ b/digitala.html
@@ -102,6 +102,10 @@ button:hover {
   transition: transform 0.2s ease-in-out;
 }
 
+nav {
+  height: 80px;
+}
+
 nav a:hover {
   position: relative;
 }
@@ -143,56 +147,51 @@ section h3 {
   font-size: 1.8rem;
 }
 
+header {
+  padding-top: 6rem !important;
+}
+
+#about {
+  margin-top: 2.5rem !important;
+}
+
+svg circle {
+  display: none;
+}
+
+svg {
+  width: 2rem !important;
+  height: 2rem !important;
+}
+
   </style>
 </head><body class="bg-base font-galactic text-soft min-h-screen">
-    <!-- Glassy Navbar -->
-    <nav class="fixed top-0 left-0 w-full z-30 bg-accent/90 backdrop-blur-lg shadow-xl border-b-2 border-accentDark"
-        style="min-width:1024px;">
-        <div class="max-w-5xl mx-auto flex justify-between items-center px-6 py-3" style="min-width: 1024px;">
-            <span
-                class="font-black text-2xl text-white tracking-wider drop-shadow-orange-glow cursor-default select-none">DIGITALA<span
-                    class="text-accentDark">.</span></span>
-            <div class="flex items-center gap-6">
-                <a href="#about" class="text-white/90 hover:text-accentDark font-semibold transition">About</a>
-                <a href="#skills" class="text-white/90 hover:text-accentDark font-semibold transition">Skills</a>
-                <a href="#services" class="text-white/90 hover:text-accentDark font-semibold transition">Services</a>
-                <a href="#testimonials"
-                    class="text-white/90 hover:text-accentDark font-semibold transition">Testimonials</a>
-                <a href="#contact" class="text-white/90 hover:text-accentDark font-semibold transition">Contact</a>
-                <!-- Social Icons -->
-                <span class="flex gap-3 ml-4">
-                    <a href="https://wa.me/71732045" target="_blank" title="WhatsApp"
-                        class="hover:scale-110 transition">
-                        <svg fill="#fff" class="w-6 h-6" viewBox="0 0 32 32">
-                            <circle cx="16" cy="16" r="16" fill="#fb923c" />
-                            <path
-                                d="M23.1 8.9A8.76 8.76 0 0 0 16 6.25C10.54 6.25 6 10.74 6 16.29c0 1.52.41 3.01 1.18 4.32L6 26l5.54-1.48c1.25.34 2.56.52 3.91.52 5.46 0 9.91-4.49 9.91-10.04 0-2.68-1.02-5.2-2.86-7.43zm-7.1 14.04c-1.19 0-2.37-.18-3.48-.53l-.25-.08-3.29.88.88-3.2-.1-.26A8.04 8.04 0 0 1 8 16.29c0-4.32 3.51-7.82 8-7.82s8 3.5 8 7.82-3.52 7.82-8 7.82zm4.37-5.94c-.24-.11-1.41-.7-1.62-.77-.22-.08-.38-.11-.54.12-.16.23-.62.77-.76.93-.14.16-.28.18-.52.06-.24-.11-1.03-.38-1.97-1.21-.73-.65-1.22-1.44-1.36-1.68-.14-.24-.02-.37.1-.48.11-.11.24-.28.36-.43.12-.15.16-.26.24-.44.08-.18.04-.33-.02-.46-.05-.13-.54-1.3-.74-1.78-.2-.48-.4-.41-.54-.42-.13-.01-.29-.01-.44-.01-.15 0-.4.06-.61.28-.2.22-.8.77-.8 1.88 0 1.1.82 2.16.94 2.31.12.16 1.62 2.47 4.02 3.37.56.19 1 .3 1.34.38.56.12 1.07.1 1.48.06.45-.04 1.41-.57 1.61-1.13.2-.56.2-1.03.14-1.13-.06-.1-.22-.16-.46-.28z"
-                                fill="#fff" />
-                        </svg>
-                    </a>
-                    <a href="https://www.instagram.com/digitala.zone?igsh=MWs0a3JkdDNpOW1rZw==" target="_blank"
-                        title="Instagram" class="hover:scale-110 transition">
-                        <svg fill="#fff" class="w-6 h-6" viewBox="0 0 32 32">
-                            <circle cx="16" cy="16" r="16" fill="#fb923c" />
-                            <path
-                                d="M16 10.7a5.3 5.3 0 1 0 0 10.6 5.3 5.3 0 0 0 0-10.6zm0 8.7a3.4 3.4 0 1 1 0-6.8 3.4 3.4 0 0 1 0 6.8zm6.6-8.8a1.24 1.24 0 1 1-2.47 0 1.24 1.24 0 0 1 2.47 0zm3.5 1.27c-.08-1.7-.47-3.22-1.7-4.46C23.22 5.47 21.7 5.08 20 5c-1.75-.08-7-.08-8.75 0-1.7.08-3.22.47-4.46 1.7C5.47 8.78 5.08 10.3 5 12c-.08 1.75-.08 7 0 8.75.08 1.7.47 3.22 1.7 4.46 1.24 1.24 2.76 1.63 4.46 1.7 1.75.08 7 .08 8.75 0 1.7-.08 3.22-.47 4.46-1.7 1.24-1.24 1.63-2.76 1.7-4.46.08-1.75.08-7 0-8.75zm-2.18 10.7c-.31.77-.91 1.37-1.68 1.68-1.17.46-3.94.36-5.74.36s-4.57.1-5.74-.36a2.54 2.54 0 0 1-1.68-1.68c-.46-1.17-.36-3.94-.36-5.74s-.1-4.57.36-5.74c.31-.77.91-1.37 1.68-1.68 1.17-.46 3.94-.36 5.74-.36s4.57-.1 5.74.36c.77.31 1.37.91 1.68 1.68.46 1.17.36 3.94.36 5.74s.1 4.57-.36 5.74z"
-                                fill="#fff" />
-                        </svg>
-                    </a>
-                    <a href="https://www.linkedin.com/in/tala-chibli-89a8632ab?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                        target="_blank" title="LinkedIn" class="hover:scale-110 transition">
-                        <svg fill="#fff" class="w-6 h-6" viewBox="0 0 32 32">
-                            <circle cx="16" cy="16" r="16" fill="#fb923c" />
-                            <path
-                                d="M24 24h-3.55v-5.35c0-1.27-.03-2.91-1.77-2.91-1.77 0-2.04 1.38-2.04 2.82V24H13V13h3.41v1.5h.05c.48-.9 1.67-1.85 3.44-1.85 3.68 0 4.36 2.42 4.36 5.57V24zM9 11.5a2.06 2.06 0 1 1 0-4.12 2.06 2.06 0 0 1 0 4.12zm1.78 12.5H7.21V13h3.57v11z"
-                                fill="#fff" />
-                        </svg>
-                    </a>
-                </span>
-            </div>
-        </div>
-    </nav>
-
+  <!-- الشريط + أيقونات السوشيال بخلفياتها الأصلية -->
+  <nav class="fixed top-0 left-0 w-full z-30 bg-accent/90 backdrop-blur-lg shadow-xl border-b-2 border-accentDark" style="min-width:1024px; height: 80px;">
+    <div class="max-w-5xl mx-auto flex justify-between items-center px-6 py-3" style="min-width: 1024px;">
+      <span class="font-black text-2xl text-white tracking-wider drop-shadow-orange-glow cursor-default select-none">
+        DIGITALA<span class="text-accentDark">.</span>
+      </span>
+      <div class="flex items-center gap-6">
+        <a href="#about" class="text-white/90 hover:text-accentDark font-semibold transition">About</a>
+        <a href="#skills" class="text-white/90 hover:text-accentDark font-semibold transition">Skills</a>
+        <a href="#services" class="text-white/90 hover:text-accentDark font-semibold transition">Services</a>
+        <a href="#testimonials" class="text-white/90 hover:text-accentDark font-semibold transition">Testimonials</a>
+        <a href="#contact" class="text-white/90 hover:text-accentDark font-semibold transition">Contact</a>
+        <span class="flex gap-4 ml-4">
+          <a href="https://wa.me/71732045" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" class="w-6 h-6" />
+          </a>
+          <a href="https://www.instagram.com/digitala.zone" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" class="w-6 h-6" />
+          </a>
+          <a href="https://www.linkedin.com/in/tala-chibli-89a8632ab" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="w-6 h-6" />
+          </a>
+        </span>
+      </div>
+    </div>
+  </nav>
     <header
         class="min-h-screen flex flex-col justify-center items-center px-4 text-center relative pt-36 overflow-hidden">
 
