--- a/digitala.html
+++ b/digitala.html
@@ -103,7 +103,11 @@ button:hover {
 }
 
 nav {
-  height: 80px;
+  height: 100px;
+}
+
+nav span, nav a {
+  font-size: 1.3rem;
 }
 
 nav a:hover {
@@ -123,72 +127,72 @@ nav a:hover::after {
 }
 
 header h1 {
-  font-size: 5.5rem;
+  font-size: 6rem;
 }
 
 header p {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 }
 
 .typing-container {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
 }
 
 section p,
 section li {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 
 section h2 {
-  font-size: 3.5rem;
+  font-size: 4rem;
 }
 
 section h3 {
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 header {
-  padding-top: 6rem !important;
+  padding-top: 5rem !important;
 }
 
 #about {
-  margin-top: 2.5rem !important;
+  margin-top: 4rem !important;
 }
 
-svg circle {
-  display: none;
+.social-icons img {
+  width: 40px;
+  height: 40px;
+  transition: transform 0.3s ease;
 }
 
-svg {
-  width: 2rem !important;
-  height: 2rem !important;
+.social-icons img:hover {
+  transform: scale(1.15);
 }
 
   </style>
 </head><body class="bg-base font-galactic text-soft min-h-screen">
-  <!-- الشريط + أيقونات السوشيال بخلفياتها الأصلية -->
-  <nav class="fixed top-0 left-0 w-full z-30 bg-accent/90 backdrop-blur-lg shadow-xl border-b-2 border-accentDark" style="min-width:1024px; height: 80px;">
-    <div class="max-w-5xl mx-auto flex justify-between items-center px-6 py-3" style="min-width: 1024px;">
-      <span class="font-black text-2xl text-white tracking-wider drop-shadow-orange-glow cursor-default select-none">
+  <nav class="fixed top-0 left-0 w-full z-30 bg-accent/90 backdrop-blur-lg shadow-xl border-b-2 border-accentDark" style="min-width:1024px;">
+    <div class="max-w-6xl mx-auto flex justify-between items-center px-6 py-6">
+      <span class="font-black text-3xl text-white tracking-wider drop-shadow-orange-glow cursor-default select-none">
         DIGITALA<span class="text-accentDark">.</span>
       </span>
-      <div class="flex items-center gap-6">
+      <div class="flex items-center gap-8">
         <a href="#about" class="text-white/90 hover:text-accentDark font-semibold transition">About</a>
         <a href="#skills" class="text-white/90 hover:text-accentDark font-semibold transition">Skills</a>
         <a href="#services" class="text-white/90 hover:text-accentDark font-semibold transition">Services</a>
         <a href="#testimonials" class="text-white/90 hover:text-accentDark font-semibold transition">Testimonials</a>
         <a href="#contact" class="text-white/90 hover:text-accentDark font-semibold transition">Contact</a>
-        <span class="flex gap-4 ml-4">
+        <div class="flex gap-4 ml-4 social-icons">
           <a href="https://wa.me/71732045" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" class="w-6 h-6" />
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
           </a>
           <a href="https://www.instagram.com/digitala.zone" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" class="w-6 h-6" />
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" />
           </a>
           <a href="https://www.linkedin.com/in/tala-chibli-89a8632ab" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="w-6 h-6" />
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
           </a>
-        </span>
+        </div>
       </div>
     </div>
   </nav>
