--- a/digitala.html
+++ b/digitala.html
@@ -442,8 +442,7 @@
     </a>
   </div>
   <footer class="text-center py-10 font-soft select-none" style="background: #222; color:#888;">
-    &copy; 2025 Tala Chibli | Digitala <br>
-    <span style="font-size: 1.1rem;">Made with classic elegance.</span>
+    &copy; 2025 Tala Chibli | Digitala
   </footer>
   <script>
     // Animate sections on scroll
