--- a/digitala.html
+++ b/digitala.html
@@ -330,8 +330,7 @@
             position: relative;
             z-index: 2;
         }
-
-        /* Portfolio/Highlights */
+    /* Portfolio/Highlights */
         .portfolio-grid {
             display: grid;
             gap: 2rem;
@@ -382,7 +381,6 @@
             loading: lazy;
             scroll-snap-align: start;
             transition: transform .2s;
-            /* NO GRAYSCALE: keep images in original colors */
         }
 
         .portfolio-gallery-image:hover {
@@ -404,100 +402,6 @@
             margin-bottom: 0.3em;
             letter-spacing: .02em;
         }
-
-        /* Skills */
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 1.3rem;
-            margin-top: 1.6rem;
-        }
-
-        .skill-card {
-            background-color: var(--gray);
-            padding: 1.1rem;
-            border-radius: 13px;
-            text-align: center;
-            font-weight: 600;
-            color: var(--black);
-            box-shadow: 0 2px 10px #16161633;
-            font-size: 1.05rem;
-            transition: transform 0.2s, background .2s;
-            border: 2px solid #16161622;
-        }
-
-        .skill-card:hover {
-            transform: translateY(-4px) scale(1.03);
-            background: #e5e5e5;
-        }
-
-        /* Feedbacks */
-        .testimonial-carousel {
-            max-width: 470px;
-            margin: 1.7rem auto 2.2rem auto;
-            position: relative;
-            min-height: 170px;
-        }
-
-        .testimonial-card {
-            background: var(--gray);
-            border-radius: 10px;
-            padding: 1.1rem 1.3rem;
-            font-size: 1.05rem;
-            color: var(--gray-dark);
-            border: 1.5px solid var(--gray-border);
-            position: absolute;
-            width: 100%;
-            transition: opacity .3s, transform .3s;
-            opacity: 0;
-            left: 0;
-            top: 0;
-            z-index: 1;
-            pointer-events: none;
-            box-shadow: 0 2px 10px #16161633;
-        }
-
-        .testimonial-card.active {
-            opacity: 1;
-            position: relative;
-            z-index: 2;
-            transform: scale(1.03) rotate(-1deg);
-            pointer-events: auto;
-        }
-
-        .testimonial-card .author {
-            margin-top: 0.7rem;
-            font-size: 1.1rem;
-            font-weight: 700;
-            color: var(--black);
-            text-align: right;
-            letter-spacing: 0.7px;
-        }
-
-        .testimonial-nav {
-            text-align: center;
-            margin-top: 1.3rem;
-        }
-
-        .testimonial-dot {
-            display: inline-block;
-            width: 12px;
-            height: 12px;
-            background: var(--black);
-            border-radius: 50%;
-            margin: 0 7px;
-            opacity: .25;
-            cursor: pointer;
-            transition: opacity .19s, background .19s;
-            border: 2px solid var(--gray-dark);
-        }
-
-        .testimonial-dot.active {
-            opacity: 1;
-            background: var(--gray-dark);
-            outline: 2px solid var(--black);
-        }
-
         /* Contact */
         .contact-section {
             max-width: 440px;
@@ -738,6 +642,133 @@
                 min-height: 110px;
             }
         }
+          .graphics-section {
+            background: var(--gray);
+        }
+
+        .graphics-container {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 2.3rem 1rem;
+            border-radius: var(--radius);
+            box-shadow: var(--shadow);
+            background: var(--white);
+        }
+
+        .graphics-title {
+            font-family: 'Montserrat', 'Inter', Arial, sans-serif;
+            font-size: 2rem;
+            margin-bottom: 1.5rem;
+            color: var(--black);
+            letter-spacing: .04em;
+            text-align: left;
+        }
+
+        .graphics-grid {
+            display: grid;
+            gap: 2.2rem;
+            grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+        }
+
+        .graphics-project-card {
+            background: var(--gray);
+            border-radius: var(--radius-card);
+            box-shadow: 0 2px 12px #16161622;
+            border: 1.3px solid var(--gray-border);
+            padding: 1.5rem 1.3rem;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .graphics-project-title {
+            font-size: 1.18rem;
+            font-weight: 700;
+            font-family: 'Montserrat', 'Inter', Arial, sans-serif;
+            margin-bottom: 0.7em;
+            color: var(--black);
+            letter-spacing: .01em;
+        }
+
+        .graphics-project-description {
+            font-size: 1.03rem;
+            color: #232323;
+            margin-bottom: 1.1em;
+            font-weight: 500;
+            background: var(--white);
+            border-radius: 7px;
+            padding: 0.7em 1em;
+            box-shadow: 0 2px 8px #16161611;
+        }
+
+        .graphics-images-list {
+            width: 100%;
+            display: flex;
+            gap: 1.2em;
+            flex-wrap: wrap;
+        }
+
+        .graphics-image-wrapper {
+            flex: 1 1 180px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 1.2em;
+            min-width: 0;
+        }
+
+        .graphics-image {
+            width: 100%;
+            max-width: 360px;
+            height: auto;
+            border-radius: 11px;
+            object-fit: contain;
+            box-shadow: 0 2px 10px #16161622;
+            background: #fff;
+            transition: transform .21s;
+            margin-bottom: 0.7em;
+        }
+
+        .graphics-image:hover {
+            transform: scale(1.04) rotate(-2deg);
+        }
+
+        .graphics-image-desc {
+            font-size: 0.97rem;
+            color: #444;
+            background: #f7f7f7;
+            border-radius: 7px;
+            padding: 0.5em 0.9em;
+            text-align: center;
+            min-width: 70px;
+            box-shadow: 0 1px 6px #16161607;
+        }
+
+        @media (max-width: 700px) {
+            .graphics-title {
+                font-size: 1.3rem;
+            }
+
+            .graphics-container {
+                padding: 1.2rem 0.2rem;
+            }
+
+            .graphics-project-title {
+                font-size: 1rem;
+            }
+
+            .graphics-project-description {
+                font-size: .97rem;
+            }
+
+            .graphics-images-list {
+                gap: 0.6em;
+            }
+
+            .graphics-image {
+                max-width: 98vw;
+            }
+        }
     </style>
 </head>
 
@@ -752,8 +783,7 @@
             <a href="#about" class="active" data-tab="about">About</a>
             <a href="#services" data-tab="services">Services</a>
             <a href="#portfolio" data-tab="portfolio">Highlights</a>
-            <a href="#skills" data-tab="skills">Skills</a>
-            <a href="#feedbacks" data-tab="feedbacks">Feedbacks</a>
+            <a href="#graphics" data-tab="graphics">Portfolio</a>
             <a href="#contacts" data-tab="contacts">Contact</a>
         </nav>
     </header>
@@ -856,18 +886,40 @@
         <div style="margin:2.2rem 0 0 0;text-align:center;">
         </div>
     </section>
-    <!-- FEEDBACKS -->
-    <section class="tab-section" id="feedbacks">
-        <h2 class="section-title">Feedbacks</h2>
-        <div class="testimonial-carousel" id="testimonialCarousel"></div>
-        <div class="testimonial-nav" id="testimonialNav"></div>
-        <div style="margin-top: 40px;">
-            <iframe
-                src="https://docs.google.com/forms/d/e/1FAIpQLSefhMEIpNWiyYSvi_f4uJF2O1RQxAvBQ6zbuvze6TNLNzD5zQ/viewform?embedded=true"
-                width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"
-                style="border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                Loading…
-            </iframe>
+       <!-- GRAPHICS PORTFOLIO (NEW SECTION) -->
+    <section class="tab-section graphics-section" id="graphics">
+        <div class="graphics-container">
+            <h2 class="graphics-title">Portfolio</h2>
+            <div class="graphics-grid">
+                <!-- Example Project - You can duplicate this .graphics-project-card and change its content/photos -->
+                <div class="graphics-project-card">
+                    <div class="graphics-project-title">Menu Project</div>
+                    <div class="graphics-project-description">
+                        Bas Pasta Menu – Crepeno
+                        A bold, bilingual menu design blending functionality with appetite appeal. Using a
+                        blackboard-style background and vibrant yellow typography, I created a clear, easy-to-read price
+                        table for multiple pasta sizes. Playful cheese, corn, and pasta visuals add warmth, while
+                        highlights for extras, spice indicators, and a dedicated corn section enhance usability.
+                        Finished with contact details and social media for instant customer connection.
+                    </div>
+                    <div class="graphics-images-list">
+                        <div class="graphics-image-wrapper">
+                            <img class="graphics-image" src="https://imgur.com/QYBRaU8.jpg" alt="Logo Design" />
+                            <div class="graphics-image-desc">Post 1</div>
+                        </div>
+                        <div class="graphics-image-wrapper">
+                            <img class="graphics-image" src="https://imgur.com/dzpdQEU.jpg" alt="Menu Design" />
+                            <div class="graphics-image-desc">Post 2</div>
+                        </div>
+                        <div class="graphics-image-wrapper">
+                            <img class="graphics-image" src="https://imgur.com/9uWScuA.jpg" alt="Poster" />
+                            <div class="graphics-image-desc">Full Menu</div>
+                        </div>
+                        <!-- Add more photos here as needed, each with its own .graphics-image-desc -->
+                    </div>
+                </div>
+                <!-- Duplicate above .graphics-project-card for more projects -->
+            </div>
         </div>
     </section>
     <!-- CONTACT -->
