--- a/digitala.html
+++ b/digitala.html
@@ -330,7 +330,8 @@
             position: relative;
             z-index: 2;
         }
-    /* Portfolio/Highlights */
+
+        /* Portfolio/Highlights */
         .portfolio-grid {
             display: grid;
             gap: 2rem;
@@ -402,6 +403,7 @@
             margin-bottom: 0.3em;
             letter-spacing: .02em;
         }
+
         /* Contact */
         .contact-section {
             max-width: 440px;
@@ -642,7 +644,8 @@
                 min-height: 110px;
             }
         }
-          .graphics-section {
+
+        .graphics-section {
             background: var(--gray);
         }
 
@@ -805,16 +808,6 @@
                     I approach every project as a collaboration, driven by curiosity, precision, and ambition.<br><br>
                     <span style="font-weight:700;">Dream big. Design bold. Deliver excellence.</span>
                 </p>
-                <div class="about-stats">
-                    <div class="stat-box">
-                        <div class="stat-number">13</div>
-                        <div class="stat-label">Clients</div>
-                    </div>
-                    <div class="stat-box">
-                        <div class="stat-number">3</div>
-                        <div class="stat-label">Years Experience</div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -867,26 +860,7 @@
             </div>
         </div>
     </section>
-    <!-- SKILLS -->
-    <section class="tab-section" id="skills">
-        <h2 class="section-title">Skills</h2>
-        <div class="skills-grid">
-            <div class="skill-card">Social Media Managing</div>
-            <div class="skill-card">Content Creation</div>
-            <div class="skill-card">Graphic Design</div>
-            <div class="skill-card">Branding</div>
-            <div class="skill-card">UI/UX Design</div>
-            <div class="skill-card">Web Development</div>
-            <div class="skill-card">Photojournalism</div>
-            <div class="skill-card">Google Workspace</div>
-            <div class="skill-card">Video Editing</div>
-            <div class="skill-card">Project Management</div>
-            <div class="skill-card">Client Relations</div>
-        </div>
-        <div style="margin:2.2rem 0 0 0;text-align:center;">
-        </div>
-    </section>
-       <!-- GRAPHICS PORTFOLIO (NEW SECTION) -->
+    <!-- GRAPHICS PORTFOLIO (NEW SECTION) -->
     <section class="tab-section graphics-section" id="graphics">
         <div class="graphics-container">
             <h2 class="graphics-title">Portfolio</h2>
@@ -896,11 +870,6 @@
                     <div class="graphics-project-title">Menu Project</div>
                     <div class="graphics-project-description">
                         Bas Pasta Menu – Crepeno
-                        A bold, bilingual menu design blending functionality with appetite appeal. Using a
-                        blackboard-style background and vibrant yellow typography, I created a clear, easy-to-read price
-                        table for multiple pasta sizes. Playful cheese, corn, and pasta visuals add warmth, while
-                        highlights for extras, spice indicators, and a dedicated corn section enhance usability.
-                        Finished with contact details and social media for instant customer connection.
                     </div>
                     <div class="graphics-images-list">
                         <div class="graphics-image-wrapper">
@@ -938,7 +907,7 @@
                         loading="lazy" />
                     WhatsApp
                 </a>
-                <a href="https://www.instagram.com/digitala.zone" target="_blank" rel="noopener">
+                <a href="https://www.instagram.com/tala.chibli" target="_blank" rel="noopener">
                     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg" alt="Instagram"
                         loading="lazy" />
                     Instagram
