--- a/digitala.html
+++ b/digitala.html
@@ -810,30 +810,14 @@
         <div class="graphics-container">
             <h2 class="graphics-title">Portfolio</h2>
             <div class="graphics-file-grid">
-                <a class="file-card" href="project-menu.html" target="_blank">
+                <!-- GRAPHICS PORTFOLIO (CARD 1) -->
+                <a class="file-card" href="https://tala-chibli11.github.io/projects/crepeno.html" target="_blank">
                     <div class="file-tab"></div>
                     <div class="file-content">
                         <div class="file-title">Menu Project</div>
                         <div class="file-desc">Bas Pasta Menu – Crepeno</div>
                     </div>
                 </a>
-                <a class="file-card" href="project-branding.html" target="_blank">
-                    <div class="file-tab"></div>
-                    <div class="file-content">
-                        <div class="file-title">Branding Project</div>
-                        <div class="file-desc">Logo, colors, and identity for a startup.</div>
-                    </div>
-                </a>
-                <a class="file-card" href="project-social.html" target="_blank">
-                    <div class="file-tab"></div>
-                    <div class="file-content">
-                        <div class="file-title">Social Media Campaign</div>
-                        <div class="file-desc">Multi-platform campaign for growth.</div>
-                    </div>
-                </a>
-                <!-- Add more file cards for each project as needed -->
-            </div>
-        </div>
     </section>
     <!-- CONTACT -->
     <section class="tab-section" id="contacts">
