--- a/digitala.html
+++ b/digitala.html
@@ -729,7 +729,7 @@
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Creative%20Copywriting.%20Can%20you%20help%20me%20with%20content%20for%20my%20brand?"
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
-                        style="background-image:url('https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=600&q=80');">
+                        style="background-image:url('https://imgur.com/M6qTcoc.png');">
                         <div class="service-glass">
                             <div class="service-title">UI/UX Design</div>
                             <div class="service-desc">I design intuitive and modern user experiences that blend
@@ -743,7 +743,7 @@
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Branding%20%26%20Identity%20services.%20Can%20we%20discuss%20my%20project?"
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
-                        style="background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80');">
+                        style="background-image:url('https://imgur.com/XGtqY2r.png');">
                         <div class="service-glass">
                             <div class="service-title">Marketing & Branding</div>
                             <div class="service-desc">I help businesses build strong brand identities and marketing
@@ -756,7 +756,7 @@
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Web%20Design%20%26%20Development.%20Can%20you%20help%20me%20build%20a%20website?"
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
-                        style="background-image:url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80');">
+                        style="background-image:url('https://imgur.com/2Js0wy6.png');">
                         <div class="service-glass">
                             <div class="service-title">Social Media Management</div>
                             <div class="service-desc">I create and manage content that builds engagement, grows
@@ -769,7 +769,7 @@
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Social%20Media%20Management.%20Can%20we%20talk%20about%20my%20online%20presence?"
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
-                        style="background-image:url('https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=600&q=80');">
+                        style="background-image:url('https://imgur.com/g2awOon.png');">
                         <div class="service-glass">
                             <div class="service-title">Content Writing & Creation</div>
                             <div class="service-desc">I craft compelling content that captures attention and tells your
@@ -782,7 +782,7 @@
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Digital%20Strategy.%20Can%20you%20guide%20me%20on%20how%20to%20grow%20my%20business%20online?"
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
-                        style="background-image:url('https://images.unsplash.com/photo-1465101178521-c1a2a0f28acf?auto=format&fit=crop&w=600&q=80');">
+                        style="background-image:url('https://imgur.com/kB4svwU.png');">
                         <div class="service-glass">
                             <div class="service-title">Frontend Development</div>
                             <div class="service-desc">I build responsive and visually appealing websites that combine
@@ -795,7 +795,7 @@
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Graphic%20Design.%20Can%20you%20create%20visuals%20for%20my%20brand%20or%20project?"
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
-                        style="background-image:url('https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=600&q=80');">
+                        style="background-image:url('https://imgur.com/ObC5dWi.png');">
                         <div class="service-glass">
                             <div class="service-title">Extra Services</div>
                             <div class="service-desc">Alongside my core services, I offer tailored support with CVs,
