--- a/digitala.html
+++ b/digitala.html
@@ -890,19 +890,37 @@
         <div class="portfolio-grid">
             <div class="portfolio-card">
                 <div class="portfolio-gallery"
-                    data-images='["https://imgur.com/BamIxjC.jpg","https://imgur.com/SVV3o8v.jpg","https://imgur.com/VeGmutE.jpg","https://imgur.com/vnA9cMY.jpg","https://imgur.com/88tJYZx.jpg","https://imgur.com/3ijzEKx.jpg","https://imgur.com/arl1bZF.jpg"]'>
+                    data-images='["https://imgur.com/fKIoPZm.png","https://imgur.com/TrGFFQU.png"]'>
                     <div class="portfolio-gallery-images"></div>
                 </div>
                 <div class="portfolio-body">
-                    <div class="portfolio-title">My Portfolio 2025</div>
+                    <div class="portfolio-title">Digitala's Marketing Collateral</div>
                 </div>
             </div>
             <div class="portfolio-card">
-                <div class="portfolio-gallery" data-images='["https://imgur.com/tOo8QR4.jpg"]'>
+                <div class="portfolio-gallery"
+                    data-images='["https://imgur.com/DMi5kGD.png","https://imgur.com/pavUhng.png","https://imgur.com/A9qOSGd.png","https://imgur.com/OGsgfRB.png","https://imgur.com/aknux2M.png"]'>
                     <div class="portfolio-gallery-images"></div>
                 </div>
                 <div class="portfolio-body">
-                    <div class="portfolio-title">My Resume</div>
+                    <div class="portfolio-title">Digitala's Brochure</div>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-gallery" data-images='["https://imgur.com/9YqanPF.png"]'>
+                    <div class="portfolio-gallery-images"></div>
+                </div>
+                <div class="portfolio-body">
+                    <div class="portfolio-title">Digitala's Capability Statement</div>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-gallery"
+                    data-images='["https://imgur.com/n4NgFC9.png","https://imgur.com/t8Ojk37.png","https://imgur.com/R2fxvaN.png","https://imgur.com/BZqzLnY.png","https://imgur.com/tf8mDvH.png","https://imgur.com/tQ5vTfs.png"]'>
+                    <div class="portfolio-gallery-images"></div>
+                </div>
+                <div class="portfolio-body">
+                    <div class="portfolio-title">Digitala's Brand Style Guide</div>
                 </div>
             </div>
         </div>
